[gd_scene load_steps=2 format=3 uid="uid://da0oc27bh80ic"]

[ext_resource type="Script" path="res://gui/city_menu.gd" id="1_e617r"]

[node name="CityMenu" type="Control"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e617r")

[node name="CityMenuRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="CityMenuContainer" type="VBoxContainer" parent="CityMenuRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -109.5
offset_right = 109.5
offset_bottom = 70.0
grow_horizontal = 2
theme_override_constants/separation = 25

[node name="CityHeader" type="VSplitContainer" parent="CityMenuRect/CityMenuContainer"]
layout_mode = 2
dragger_visibility = 1

[node name="CityLabel" type="RichTextLabel" parent="CityMenuRect/CityMenuContainer/CityHeader"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "Test"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="BuildButtons" type="BoxContainer" parent="CityMenuRect/CityMenuContainer/CityHeader"]
layout_mode = 2
alignment = 1

[node name="BuildRouteBtn" type="Button" parent="CityMenuRect/CityMenuContainer/CityHeader/BuildButtons"]
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "Build Route"

[node name="BuildIndustryBtn" type="Button" parent="CityMenuRect/CityMenuContainer/CityHeader/BuildButtons"]
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "Build Industry"

[node name="SupplyContainer" type="VBoxContainer" parent="CityMenuRect/CityMenuContainer"]
layout_mode = 2

[node name="SupplyHeader" type="Label" parent="CityMenuRect/CityMenuContainer/SupplyContainer"]
layout_mode = 2
text = "SUPPLY"
horizontal_alignment = 1

[node name="CitySupply" type="GridContainer" parent="CityMenuRect/CityMenuContainer/SupplyContainer"]
layout_mode = 2
columns = 5

[node name="DemandContainer" type="VBoxContainer" parent="CityMenuRect/CityMenuContainer"]
layout_mode = 2

[node name="DemandHeader" type="Label" parent="CityMenuRect/CityMenuContainer/DemandContainer"]
layout_mode = 2
text = "DEMAND"
horizontal_alignment = 1

[node name="CityDemand" type="GridContainer" parent="CityMenuRect/CityMenuContainer/DemandContainer"]
layout_mode = 2
columns = 5

[node name="IndustriesContainer" type="VBoxContainer" parent="CityMenuRect/CityMenuContainer"]
layout_mode = 2

[node name="IndustriesHeader" type="Label" parent="CityMenuRect/CityMenuContainer/IndustriesContainer"]
layout_mode = 2
text = "INDUSTRIES"
horizontal_alignment = 1

[node name="CityIndustry" type="GridContainer" parent="CityMenuRect/CityMenuContainer/IndustriesContainer"]
layout_mode = 2
columns = 5

[connection signal="close_menu" from="." to="." method="_on_close_menu"]
[connection signal="button_down" from="CityMenuRect/CityMenuContainer/CityHeader/BuildButtons/BuildRouteBtn" to="." method="_on_build_route_btn_button_down"]
